# localflow

./: .gitignore  PACKAGING.md  README.md  app.spec  config.example.yaml  example.bat  pyproject.toml  test.bat  update.bat
examples/: git_mail_notify.py  git_trigger_sim.py  git_watch.py  sim_batch_script.py  sim_run_script.py
frontend/: README.md  index.html  package.json  vite.config.js
frontend/src/: App.jsx  BlueprintPanel.jsx  ParamSchemaForm.jsx  RunScriptPage.jsx  TemplateView.jsx  api.js  index.css
plugins/diff_render/: README.md  __init__.py  render.py  theme.py
plugins/git_mail_notify/: README.md  __init__.py  script.py  wire.py
plugins/git_update/: README.md  __init__.py  automation.py  last_update.py  models.py
plugins/mail_send/: README.md  __init__.py  models.py  send.py
plugins/sim_run/: README.md  __init__.py  command.py  log_result.py  script.py
src/app_main/: __main__.py  api.py  app_config.py  automation_catalog.py  blueprints.py  history_hook.py  plugin_api.py  plugin_loader.py  run_history.py  runtime.py  server.py  static_files.py
tests/: test_api.py  test_app_config.py  test_automation_catalog.py  test_blueprints.py  test_diff_render.py  test_examples.py  test_git_mail_notify.py  test_git_update.py  test_mail_send.py  test_plugin_loader.py  test_run_history.py  test_script.py  test_script_api.py  test_sim_run.py
tools/: README.md  pack.bat  pack.sh
